package com.kosiso.advancenoteapp_cleanarchitecture.common

object Constants {
    const val DATABASE_NAME = "note_database"
    const val ORDER_SECTION = "ORDER_SECTION"
    const val SORT = "Sort"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
}